vlib/v/checker/tests/incorrect_smartcast3_err.out
vlib/v/checker/tests/incorrect_smartcast3_err.vv:25:5: notice: smartcasting requires either an immutable value, or an explicit mut keyword before the value
   23 | 
   24 |     mut r := la.regex
   25 |     if r is RE {
      |        ^
   26 |         println(r)
   27 |         println(r.matches_string(item))
vlib/v/checker/tests/incorrect_smartcast3_err.vv:30:8: notice: smartcasting requires either an immutable value, or an explicit mut keyword before the value
   28 |     }
   29 | 
   30 |     match r {
      |           ^
   31 |         RE { r.matches_string(item) }
   32 |         else {}
vlib/v/checker/tests/incorrect_smartcast3_err.vv:27:13: error: unknown method or field: `OurRegex.matches_string`
   25 |     if r is RE {
   26 |         println(r)
   27 |         println(r.matches_string(item))
      |                   ~~~~~~~~~~~~~~~~~~~~
   28 |     }
   29 |
vlib/v/checker/tests/incorrect_smartcast3_err.vv:27:3: error: `println` can not print void expressions
   25 |     if r is RE {
   26 |         println(r)
   27 |         println(r.matches_string(item))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   28 |     }
   29 |
vlib/v/checker/tests/incorrect_smartcast3_err.vv:31:10: error: unknown method or field: `OurRegex.matches_string`
   29 | 
   30 |     match r {
   31 |         RE { r.matches_string(item) }
      |                ~~~~~~~~~~~~~~~~~~~~
   32 |         else {}
   33 |     }
